--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   --color-defa: #273444;
   --color-coco: #84563c;
   --color-gray: #8492a6;
+  --color-sgray: #afb3b9;
   --color-red: tomato;
 }
 
@@ -18,6 +19,12 @@
     sans-serif, "Apple Color Emoji";
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
 /* Common things below */
 
 /* Status-bar */
@@ -26,6 +33,7 @@
   display: flex;
   margin: 10px 20px;
   justify-content: center;
+  height: auto;
 }
 
 .connection {
@@ -42,8 +50,18 @@
 .power {
   width: 33%;
   text-align: right;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
+.battery-percent {
+  margin-right: 5px;
+}
+
+.battery-image .hidden {
+  display: none;
+}
 /* badge */
 
 .badge {
@@ -61,13 +79,17 @@
 /* Navigation-bar */
 
 .navigation-bar {
+  display: flex;
   position: fixed;
   bottom: 0;
   width: 100vw;
-  height: auto;
+  height: 72px;
+  background-color: var(--color-coco);
+  border-top: 1px solid var(--color-coco);
 }
 
 .navigation-bar ul {
+  width: 100%;
   list-style: none;
   padding-left: 0;
   display: flex;
@@ -99,7 +121,35 @@
   animation: notificationAnimation 2500ms ease-in-out infinite;
 }
 
-/* Screen size > 600px */
+#guard {
+  width: 0;
+  height: 72px;
+}
+
+/* Header */
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  height: auto;
+}
+
+.header-title strong {
+  font-size: 30px;
+}
+
+.header-icons span i {
+  margin-right: 20px;
+  cursor: pointer;
+}
+
+.header-icons span:last-child i {
+  margin-right: 0;
+}
+
+/* Screen size > 704px */
 
 .no-mobile {
   z-index: 99;
@@ -116,7 +166,7 @@
   align-items: center;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 704px) {
   .no-mobile {
     display: none;
   }
@@ -220,27 +270,6 @@
   animation-delay: 0.5s;
 }
 
-.friends-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 20px;
-}
-
-.friends-header-title strong {
-  font-size: 30px;
-  letter-spacing: -0.025em;
-}
-
-.friends-header-icons span i {
-  margin-right: 10px;
-  cursor: pointer;
-}
-
-.friends-header-icons span:last-child i {
-  margin-right: 0;
-}
-
 .friends-main {
   display: flex;
   flex-direction: column;
@@ -263,7 +292,6 @@
 
 .friends-main .user-profile h2 {
   font-weight: 600;
-  letter-spacing: -0.025em;
 }
 
 .multi-profile {
@@ -278,7 +306,10 @@
   padding-top: 10px;
   margin-bottom: 10px;
   border-top: 1.5px solid var(--color-coco);
-  letter-spacing: -0.025em;
+}
+
+.multi-profile .multi-profile-header span {
+  color: var(--color-gray);
 }
 
 .multi-profile .multi-profile-space {
@@ -318,6 +349,10 @@
   border-top: 1.5px solid var(--color-coco);
 }
 
+.channel .channel-header span {
+  color: var(--color-gray);
+}
+
 .channel .channel-profile {
   display: flex;
   align-items: center;
@@ -329,4 +364,138 @@
   border-radius: 36.5%;
   margin-bottom: 5px;
   margin-right: 15px;
+}
+
+/* Chats */
+
+.chatrooms {
+  padding: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.chatrooms a {
+  text-decoration: none;
+}
+
+.chatrooms .chatroom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.chatrooms .chatroom .sender {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.chatrooms .chatroom .sender .sender-profile img {
+  width: 70px;
+  height: auto;
+  border-radius: 36.5%;
+  margin-right: 20px;
+}
+
+.chatrooms .chatroom .sender .sender-profile .message-from {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.chatrooms .chatroom .sender .message-from h3 {
+  display: inline-block;
+  font-size: 20px;
+  margin-bottom: 7px;
+}
+
+.chatrooms .chatroom .sender .message-from h3 span {
+  color: var(--color-gray);
+}
+
+.chatrooms .chatroom .sender .message-from p {
+  color: var(--color-gray);
+  font-size: 17px;
+}
+
+.chatrooms .chatroom .sender-detail {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.chatrooms .chatroom .sender-detail .time-stamp {
+  color: var(--color-sgray);
+  display: inline-block;
+  margin-bottom: 7px;
+}
+
+.chatrooms .chatroom .sender-detail .no-show {
+  visibility: hidden;
+}
+
+/* View */
+
+.view-content {
+  padding: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  height: 100%;
+}
+
+.view-content .main-menu ul {
+  display: flex;
+  justify-content: flex-start;
+  list-style: none;
+  padding-left: 0;
+}
+
+.view-content .main-menu ul li {
+  margin-right: 20px;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 5px 0;
+  color: var(--color-gray);
+  cursor: pointer;
+}
+
+.view-content .main-menu ul li:last-child {
+  margin-right: 0;
+}
+
+.view-content .main-menu ul .current-list {
+  border-bottom: 2px solid var(--color-defa);
+  color: var(--color-defa);
+}
+
+.view-content .main-content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.view-content .main-content p {
+  margin-bottom: 20px;
+  text-align: center;
+  line-height: 1.6;
+}
+
+.view-content .main-content img {
+  margin-bottom: 20px;
+}
+
+.view-content .main-content button {
+  background-color: var(--color-coco);
+  border: none;
+  border-radius: 4px;
+  font-size: 15px;
+  padding: 15px 20px;
+  color: white;
 }
