--- a/style.css
+++ b/style.css
@@ -438,39 +438,44 @@ body {
   visibility: hidden;
 }
 
-/* View */
+/* Main menu & View */
 
-.view-content {
-  padding: 10px 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  height: 100%;
+.main-menu {
+  padding: 0 20px;
 }
 
-.view-content .main-menu ul {
+.main-menu ul {
   display: flex;
   justify-content: flex-start;
   list-style: none;
   padding-left: 0;
 }
 
-.view-content .main-menu ul li {
+.main-menu ul li {
   margin-right: 20px;
   font-size: 18px;
   font-weight: 500;
-  padding: 5px 0;
+  padding: 10px 0;
   color: var(--color-gray);
   cursor: pointer;
 }
 
-.view-content .main-menu ul li:last-child {
+.main-menu ul li:last-child {
   margin-right: 0;
 }
 
-.view-content .main-menu ul .current-list {
+.main-menu ul .current-list {
   border-bottom: 2px solid var(--color-defa);
   color: var(--color-defa);
+}
+
+.view-content {
+  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  height: 100%;
+  background-color: #e5e5e5;
 }
 
 .view-content .main-content {
@@ -489,6 +494,7 @@ body {
 
 .view-content .main-content img {
   margin-bottom: 20px;
+  width: 40%;
 }
 
 .view-content .main-content button {
@@ -498,4 +504,138 @@ body {
   font-size: 15px;
   padding: 15px 20px;
   color: white;
+  cursor: pointer;
+}
+
+/* Chatroom */
+
+.chatroom-header {
+  display: flex;
+  padding: 15px 20px;
+  background-color: rgb(132, 86, 60, 0.8);
+}
+
+.chatroom-header a {
+  display: flex;
+  align-items: center;
+  width: 33%;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.chatroom-header a i {
+  margin-right: 10px;
+}
+
+.chatroom-header .chatroom-friend {
+  width: 33%;
+  text-align: center;
+  font-size: 22px;
+}
+
+.chatroom-header .chatroom-header-icons {
+  width: 33%;
+  text-align: right;
+}
+
+.chatroom-header .chatroom-header-icons i {
+  padding-top: 5px;
+  margin-right: 10px;
+}
+
+.chatroom-header .chatroom-header-icons i:last-child {
+  margin-right: 0;
+}
+
+.dialogue {
+  padding: 20px;
+  height: 100vh;
+  background-color: rgb(132, 86, 60, 0.8);
+}
+
+.dialogue .date {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.dialogue .date span {
+  padding: 4px 15px;
+  border-radius: 30px;
+  font-size: 15px;
+  color: white;
+  background-color: var(--color-sgray);
+}
+
+.dialogue .messages .message {
+  display: flex;
+  margin-bottom: 30px;
+}
+
+.dialogue .messages .message .profile-in-message img {
+  width: 55px;
+  border-radius: 42.5%;
+  margin-right: 10px;
+  margin-bottom: 15px;
+}
+
+.dialogue .messages .message .message-text {
+  display: flex;
+  flex-direction: column;
+}
+
+.dialogue .messages .message .message-text p {
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+.dialogue .messages .message .message-text .text-and-time {
+  display: flex;
+  align-items: flex-end;
+}
+
+.dialogue .messages .message .message-text .text {
+  background-color: var(--color-coco);
+  color: white;
+  padding: 10px 10px 10px 15px;
+  border-radius: 0 50px 50px 50px;
+  margin-right: 10px;
+}
+
+.dialogue .messages .message .message-text .time {
+  color: var(--color-sgray);
+}
+
+.dialogue .messages .my-message {
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+}
+
+.dialogue .messages .my-message span {
+  color: var(--color-coco);
+  background-color: white;
+  padding: 10px 15px 10px 10px;
+  border-radius: 50px 0 50px 50px;
+}
+
+.dialogue .messages .my-message .first-message {
+  margin-bottom: 20px;
+}
+
+.dialogue .messages .my-message .second-message {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: flex-end;
+}
+
+.dialogue .messages .my-message .second-message .text-2 {
+  padding: 10px;
+  border-radius: 50px;
+}
+
+.dialogue .messages .my-message .time-2 {
+  background-color: transparent;
+  color: var(--color-sgray);
+  padding-bottom: 0;
+  padding-right: 10px;
 }
