--- a/css/more.css
+++ b/css/more.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   padding: 30px;
+  margin-bottom: 40px;
 }
 
 .wallet-first {
@@ -70,4 +71,38 @@
 
 .cocopay-detail-left span {
   margin-right: 30px;
+}
+
+/* Weather */
+
+.weather {
+  background-color: #e5e5e5;
+  display: flex;
+  justify-content: flex-start;
+  padding: 60px 30px;
+  margin-bottom: 40px;
+  align-items: center;
+  position: relative;
+  line-height: 1.5;
+  text-align: center;
+}
+
+.weather .current,
+.weather .tomorrow {
+  width: 40%;
+  font-weight: 500;
+}
+
+.weather i {
+  position: absolute;
+  right: 30px;
+  padding: 5px;
+  color: var(--color-scoco);
+  border: 2px solid var(--color-scoco);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.weather i:hover {
+  opacity: 0.5;
 }
